--- a/corprules.in
+++ b/corprules.in
@@ -8241,6 +8241,10 @@ PIETOPIC OTHER
 PIETOPIC SCI_COUNTRY_MAYBE SCI_THING_P
 
 MTOPIC MONEH
+STOPIC SAMOUNT MPEOP
+SAMOUNT SCI_ANUMBER
+SAMOUNT MULTIDIG
+SAMOUNT WAMOUNT
 
 DOLL \pounds
 DOLL+30 \$
@@ -8277,6 +8281,7 @@ PIELIST+7 15.0/FMTOPIC/1,17.0/FMTOPIC/-1,16.0/FMTOPIC/1,17.0/FMTOPIC/-1,19.0/FMT
 #5 SECTORS
 PIELIST+30 22.0/FTOPIC/1,24.0/FTOPIC/-1,21.0/FTOPIC/1,25.0/FTOPIC/-1,8.0/FTOPIC/0
 PIELIST+7 22.0/FMTOPIC/1,24.0/FMTOPIC/-1,21.0/FMTOPIC/1,25.0/FMTOPIC/-1,8.0/FMTOPIC/0
+
 
 PIELIST+30 20.5/FTOPIC/-1,23.5/FTOPIC/1,22.5/FTOPIC/-1,24.5/FTOPIC/0,9.0/FTOPIC/1
 PIELIST+7 20.5/FMTOPIC/-1,23.5/FMTOPIC/1,22.5/FMTOPIC/-1,24.5/FMTOPIC/0,9.0/FMTOPIC/1
@@ -8437,8 +8442,9 @@ R1 north east
 R2 south east
 NLEN 6.8
 
-FTOPIC	\footnotesize{PIETOPIC}
-FMTOPIC	\footnotesize{MTOPIC}
+FTOPIC	 \footnotesize{PIETOPIC}
+FMTOPIC	 \footnotesize{MTOPIC}
+FMTOPIC \footnotesize{STOPIC}
 
 #6 SECTORS
 PIEFANCYLIST+4 15.0/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/FTOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
